@@ -16,11 +16,9 @@ import com.orbit.repository.approval.DepartmentRepository;
 import com.orbit.repository.commonCode.ChildCodeRepository;
 import com.orbit.repository.commonCode.ParentCodeRepository;
 import com.orbit.repository.procurement.ProjectRepository;
+
+import com.orbit.service.StateService;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.FileSystemResource;
-import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
@@ -34,9 +32,6 @@ import java.nio.file.StandardCopyOption;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
-@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ProjectService {
@@ -58,22 +53,16 @@ public class ProjectService {
     public List<ProjectDTO> getAllProjects() {
         return projectRepository.findAll().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * 단일 프로젝트 조회
-     */
     @Transactional(readOnly = true)
     public ProjectDTO getProjectById(Long id) {
         return projectRepository.findById(id)
                 .map(this::convertToDto)
-                .orElseThrow(() -> new ProjectNotFoundException("ID " + id + "에 해당하는 프로젝트를 찾을 수 없습니다."));
+                .orElseThrow(() -> new ProjectNotFoundException("Project not found: " + id));
     }
 
-    /**
-     * 프로젝트 생성
-     */
     @Transactional
     public ProjectDTO createProject(ProjectDTO projectDTO, String requesterUsername) {
         // 1. 요청자 정보 조회
@@ -104,27 +93,16 @@ public class ProjectService {
         return convertToDto(savedProject);
     }
 
-    /**
-     * 프로젝트 업데이트
-     */
     @Transactional
     public ProjectDTO updateProject(Long id, ProjectDTO dto) {
         // 1. 프로젝트 조회
         Project project = projectRepository.findById(id)
-                .orElseThrow(() -> new ProjectNotFoundException("ID " + id + "에 해당하는 프로젝트를 찾을 수 없습니다."));
+                .orElseThrow(() -> new ProjectNotFoundException("Project not found: " + id));
 
-        // 기본 상태 업데이트
-        if (dto.getBasicStatus() != null) {
-            String[] basicStatusParts = dto.getBasicStatus().split("-");
-            ParentCode basicStatusParent = parentCodeRepository.findByEntityTypeAndCodeGroup(
-                    "PROJECT", "STATUS"
-            );
-            ChildCode basicStatusChild = childCodeRepository.findByParentCodeAndCodeValue(
-                    basicStatusParent, basicStatusParts[2]
-            );
-            project.setBasicStatusParent(basicStatusParent);
-            project.setBasicStatusChild(basicStatusChild);
-        }
+        updateFields(project, dto);
+        logStatusChange(project, updater);
+        return convertToDto(projectRepository.save(project));
+    }
 
         // 5. 저장 후 DTO 반환
         Project updatedProject = projectRepository.save(project);
@@ -276,28 +254,35 @@ public class ProjectService {
         project.setProjectName(dto.getProjectName());
         project.setBusinessCategory(dto.getBusinessCategory());
         project.setTotalBudget(dto.getTotalBudget());
-        project.setRequestDepartment(dto.getRequestDepartment());
-        project.setBudgetCode(dto.getBudgetCode());
-        project.setRemarks(dto.getRemarks());
+        project.setClientCompany(dto.getClientCompany());
+        project.setContractType(dto.getContractType());
 
-        // 프로젝트 기간 업데이트
-        Project.ProjectPeriod projectPeriod = project.getProjectPeriod();
-        projectPeriod.setStartDate(dto.getProjectPeriod().getStartDate());
-        projectPeriod.setEndDate(dto.getProjectPeriod().getEndDate());
+        if (dto.getProjectManager() != null) {
+            project.getProjectManager().setName(dto.getProjectManager().getName());
+            project.getProjectManager().setContact(dto.getProjectManager().getContact());
+            project.getProjectManager().setEmail(dto.getProjectManager().getEmail());
+        }
 
-        // 프로젝트 저장
-        Project savedProject = projectRepository.save(project);
-        return convertToDto(savedProject);
+        if (dto.getProjectPeriod() != null) {
+            project.getProjectPeriod().setStartDate(dto.getProjectPeriod().getStartDate());
+            project.getProjectPeriod().setEndDate(dto.getProjectPeriod().getEndDate());
+        }
     }
 
-    /**
-     * 프로젝트 삭제
-     */
-    @Transactional
-    public void deleteProject(Long id) {
-        Project project = projectRepository.findById(id)
-                .orElseThrow(() -> new ProjectNotFoundException("Project not found: " + id));
-        projectRepository.delete(project);
+    private void logStatusChange(Project project, Member member) {
+        StatusHistory history = stateService.changeState(
+                project.getId(),
+                StatusHistory.EntityType.PROJECT,
+                project.getBasicStatus(),
+                project.getProcurementStatus(),
+                member
+        );
+        project.addStatusHistory(history);
+    }
+
+    private SystemStatus parseStatus(String statusCode) {
+        String[] parts = statusCode.split("-");
+        return new SystemStatus(parts[0], parts[1]);
     }
 
     /**
@@ -313,23 +298,6 @@ public class ProjectService {
                 .remarks(dto.getRemarks())
                 .attachments(new ArrayList<>()) // 빈 리스트로 초기화 추가
                 .build();
-
-        // 부서 설정 (ID가 있는 경우)
-        if (dto.getRequestDepartmentId() != null) {
-            Department department = departmentRepository.findById(dto.getRequestDepartmentId())
-                    .orElse(null);
-            if (department != null) {
-                project.setDepartment(department);
-            }
-        }
-
-        // ProjectPeriod 설정
-        Project.ProjectPeriod period = new Project.ProjectPeriod();
-        period.setStartDate(dto.getProjectPeriod().getStartDate());
-        period.setEndDate(dto.getProjectPeriod().getEndDate());
-        project.setProjectPeriod(period);
-
-        return project;
     }
 
     /**
@@ -343,28 +311,18 @@ public class ProjectService {
         dto.setProjectIdentifier(project.getProjectIdentifier());
         dto.setProjectName(project.getProjectName());
         dto.setBusinessCategory(project.getBusinessCategory());
+        dto.setBasicStatus(project.getBasicStatus().getFullCode());
+        dto.setProcurementStatus(project.getProcurementStatus().getFullCode());
         dto.setTotalBudget(project.getTotalBudget());
-        dto.setRequestDepartment(project.getRequestDepartment());
-        dto.setBudgetCode(project.getBudgetCode());
-        dto.setRemarks(project.getRemarks());
+        dto.setClientCompany(project.getClientCompany());
+        dto.setContractType(project.getContractType());
 
-        // 기본 상태 코드 설정
-        if (project.getBasicStatusParent() != null && project.getBasicStatusChild() != null) {
-            dto.setBasicStatus(
-                    project.getBasicStatusParent().getEntityType() + "-" +
-                            project.getBasicStatusParent().getCodeGroup() + "-" +
-                            project.getBasicStatusChild().getCodeValue()
-            );
-        }
 
-        // 조달 상태 코드 설정
-        if (project.getProcurementStatusParent() != null && project.getProcurementStatusChild() != null) {
-            dto.setProcurementStatus(
-                    project.getProcurementStatusParent().getEntityType() + "-" +
-                            project.getProcurementStatusParent().getCodeGroup() + "-" +
-                            project.getProcurementStatusChild().getCodeValue()
-            );
-        }
+        ProjectResponseDTO.ManagerInfo managerInfo = new ProjectResponseDTO.ManagerInfo();
+        managerInfo.setName(project.getProjectManager().getName());
+        managerInfo.setContact(project.getProjectManager().getContact());
+        managerInfo.setEmail(project.getProjectManager().getEmail());
+        dto.setProjectManager(managerInfo);
 
         // 프로젝트 기간 설정
         ProjectDTO.PeriodInfo periodInfo = new ProjectDTO.PeriodInfo();
@@ -373,15 +331,6 @@ public class ProjectService {
             periodInfo.setEndDate(project.getProjectPeriod().getEndDate());
         }
         dto.setProjectPeriod(periodInfo);
-
-        // 첨부파일 설정 - 항상 설정
-        List<ProjectAttachmentDTO> attachmentDTOs = new ArrayList<>();
-        if (project.getAttachments() != null) {
-            attachmentDTOs = project.getAttachments().stream()
-                    .map(this::convertAttachmentToDto)
-                    .collect(Collectors.toList());
-        }
-        dto.setAttachments(attachmentDTOs);
 
         return dto;
     }
